--- a/kubernetes/apps/home/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/home/home-assistant/app/helmrelease.yaml
@@ -48,7 +48,7 @@ spec:
               startup:
                 enabled: false
             securityContext:
-              privileged: true
+              # privileged: true
               capabilities:
                 add: ["CAP_SYS_RAWIO"]
             # securityContext:
