--- a/kubernetes/apps/home/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/home/home-assistant/app/helmrelease.yaml
@@ -47,10 +47,10 @@ spec:
                 enabled: false
               startup:
                 enabled: false
-            # securityContext:
-              # privileged: true
-              # capabilities:
-              #   add: ["CAP_SYS_RAWIO"]
+            securityContext:
+              privileged: true
+              capabilities:
+                add: ["CAP_SYS_RAWIO"]
             # securityContext:
             #   allowPrivilegeEscalation: false
             #   readOnlyRootFilesystem: true
@@ -110,8 +110,8 @@ spec:
       usb:
         enabled: true
         type: hostPath
-        hostPath: /dev/serial/by-id/usb-ITEAD_SONOFF_Zigbee_3.0_USB_Dongle_Plus_V2_20240122203435-if00
+        hostPath: /dev/ttyACM0
         globalMounts:
-        - path: /dev/serial/by-id/usb-ITEAD_SONOFF_Zigbee_3.0_USB_Dongle_Plus_V2_20240122203435-if00
+        - path: /dev/ttyACM0
       tmp:
         type: emptyDir
