--- a/kubernetes/apps/home/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/home/home-assistant/app/helmrelease.yaml
@@ -47,14 +47,10 @@ spec:
                 enabled: false
               startup:
                 enabled: false
-            # securityContext:
-            #   privileged: true
-            #   capabilities:
-            #     add: ["CAP_SYS_RAWIO"]
-            # securityContext:
-            #   allowPrivilegeEscalation: false
-            #   readOnlyRootFilesystem: true
-            #   capabilities: { drop: ["ALL"] }
+            securityContext:
+              allowPrivilegeEscalation: false
+              readOnlyRootFilesystem: true
+              capabilities: { drop: ["ALL"] }
             resources:
               requests:
                 cpu: 10m
@@ -62,9 +58,9 @@ spec:
                 memory: 1Gi
         pod:
           securityContext:
-            runAsUser: 1000
-            runAsGroup: 1000
-            runAsNonRoot: false
+            runAsUser: 568
+            runAsGroup: 568
+            runAsNonRoot: true
             fsGroup: 568
             fsGroupChangePolicy: OnRootMismatch
           nodeSelector:
@@ -111,6 +107,7 @@ spec:
         enabled: true
         type: hostPath
         hostPath: /dev/ttyACM0
+        hostPathType: CharDevice
         globalMounts:
         - path: /dev/ttyACM0
       tmp:
