--- a/kubernetes/apps/home/zigbee2mqtt/app/secret.sops.yaml
+++ b/kubernetes/apps/home/zigbee2mqtt/app/secret.sops.yaml
@@ -5,8 +5,8 @@ metadata:
 stringData:
     mqtt_user: ENC[AES256_GCM,data:Leoy95n9Cn+PLq4jIRCJPpTJwVXVhCV8ATM=,iv:y7kY4AXqiR+GBn+4X4nuTKn/vnwVhs7DX1Yv8AgCIvw=,tag:vtqlxQad0Xhf9KY/akdGjQ==,type:str]
     mqtt_password: ENC[AES256_GCM,data:0+uYbffkfEDAG3FNJ2vXw1ngNWYmLxCZZ9o=,iv:tuhg8yJRhGZXeTyO9TDszSFNuJ6aBvsHedyvsIHEPM0=,tag:FF3uGp29DSrhSkRHyK830Q==,type:str]
-    zigbee_pan_id: ENC[AES256_GCM,data:qXyZO5RDiQ==,iv:7lxTqH2n8fqX+2jcXbUh2QR9YklrUvnVYr3p+EfPOfI=,tag:QCNhyLSw/M82yhRy7I51nw==,type:str]
-    zigbee_ext_pan_id: ENC[AES256_GCM,data:iYKPTzeGMbPSJ44=,iv:ZDWzfYJ2lPFRZLEhraHaa2CX6GOmKO8gIdKSXdCU7JM=,tag:prukXMHTDBeMOYwyFWjRqw==,type:str]
+    zigbee_pan_id: ENC[AES256_GCM,data:dlCjXw==,iv:GaH3YkFxhqp+tMIGN58iWwj9NUizxB6jS3OeBLB1S54=,tag:P9fU6WRPTSIO7LaMpAwd/A==,type:str]
+    zigbee_ext_pan_id: ENC[AES256_GCM,data:RajxEusa8zTXoyEvEW9H47+fvSaQjUc=,iv:kg58Yz3/ovyqSiX269riLtk2wrIdXKgoixFYhAXJBEI=,tag:2nNRuUjWMYoIB9LVUhZaCA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +22,8 @@ sops:
             TTVIZGRpVWVHU1NPS3BpN1dVQ1JIK1EK3qgjz/3t6xXVPDsq1notISsWtnREHJVJ
             4XhoOUMp09DJV89myAOi/F3bNkO+Uid7V3IQooUL03Gk7BF97eFy1Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-05-27T21:34:52Z"
-    mac: ENC[AES256_GCM,data:bW1gGwj8kqahv0KgiIvBmsNrS2DkxaA3QO2a9AwXvNkO5oFlVBcdhMTXUxzCjoUwfkgXMjvzQ0Y74msqC7J1zPlmarx8eZNnaRh3Lp97eJx2i5sSuN31NDk++9Awye+QhVtaSAV1B7YdreiTTBVFslb8halfa7RHWww/eqYt8jc=,iv:al+tgYYZZ+bfHYgilS+PqM1fjPB/Fb8Psjtrv7uSCuk=,tag:Woh0zauYPvKoVRcOBCfWyA==,type:str]
+    lastmodified: "2024-05-29T07:57:06Z"
+    mac: ENC[AES256_GCM,data:i7I5U/+sA9Wt+hXiYnVJN+k0IpzsPnLU0924RyqQVQlfEH0NQ+bX29UZSNvxS5RwQYAjTRDSGOpHiVWBpaLxnrw5CqIPG1fP7Bao7qKt1uymeZNSICN1IGLS0f/7DYj96yUwoW1SU7g4nKR5400fA1GKlc2gZbq+jK3M8u860dA=,iv:UinXG0KiID6/VypT1AEJnXyThKNA3xibjA0SMGtr2YE=,tag:RruP4Mwq75WZelmCLgSiYg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
