--- a/kubernetes/apps/ai/stable-diffusion/ui/helmrelease.yaml
+++ b/kubernetes/apps/ai/stable-diffusion/ui/helmrelease.yaml
@@ -51,16 +51,10 @@ spec:
               repository: ghcr.io/yummiii/sd-webui-forge-docker
               tag: latest
               pullPolicy: IfNotPresent
-            args:
-              - --no-half-vae
-              - --xformers
-              - --api
-              - --listen
-              - --server-name 0.0.0.0
             env:
               IIB_ACCESS_CONTROL_ALLOWED_PATHS: /app/outputs
               TZ: ${TIMEZONE}
-              ARGS: --listen --enable-insecure-extension-access --server-name 0.0.0.0
+              ARGS: --listen --enable-insecure-extension-access --server-name 0.0.0.0 --api
 
             resources:
               requests:
