--- a/kubernetes/apps/home/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/home/home-assistant/app/helmrelease.yaml
@@ -59,12 +59,12 @@ spec:
               limits:
                 memory: 1Gi
         pod:
-          # securityContext:
-          #   runAsUser: 568
-          #   runAsGroup: 568
-          #   runAsNonRoot: true
-          #   fsGroup: 568
-          #   fsGroupChangePolicy: OnRootMismatch
+          securityContext:
+            runAsUser: 1000
+            runAsGroup: 1000
+            runAsNonRoot: true
+            fsGroup: 1000
+            fsGroupChangePolicy: OnRootMismatch
           nodeSelector:
             sonoff.feature.node.kubernetes.io/dongle-e: "true"
     service:
