--- a/kubernetes/apps/ai/ollama/ks.yaml
+++ b/kubernetes/apps/ai/ollama/ks.yaml
@@ -34,3 +34,7 @@ spec:
   wait: true
   dependsOn:
     - name: ai-ollama
+  postBuild:
+    substitute:
+      APP: *app
+      GATUS_SUBDOMAIN: chat
