--- a/kubernetes/apps/storage/longhorn/app/s3-secret.sops.yaml
+++ b/kubernetes/apps/storage/longhorn/app/s3-secret.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: s3-secret
     namespace: storage
 stringData:
-    AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:7CAZTTc8hnOuCBBc,iv:OjFTJwRl/fCOG9NVw0pEo3ws+4ivuoaslPO0smZeXBU=,tag:qPWcImbZLHKC0ukLAi2Xlg==,type:str]
-    AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:6RhBwGy6FYX9JrzFTRnH6SMvuzeNvpPfvOLrKJlxGly0shO8ItemHq6I,iv:/4SQxDtYcinxT/ToIP5lRAsWGtC6AU5+a/FafRFZ738=,tag:NlwyHCSaJJ72FerJlk3ocQ==,type:str]
+    AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:UK4yvSnZ8laMc72/oDu6R2HVWN1RBu2vww==,iv:Q8jtJZsSaUJLdrLsd5ij0lrfptt4lISwG+Hsiq/Or9g=,tag:/7JgIgfcrjUI9r7pgGIz8Q==,type:str]
+    AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:sO7OBX6ppITzgpHxH+3xaMS0RL+7uCNK5A2RW21KaQ==,iv:dnbuW20E6coZEt7wNiUSe6tYDvWuBELI7AhpQv47e34=,tag:TCivyJUho3xgxYNgCj7sEw==,type:str]
     AWS_ENDPOINTS: ENC[AES256_GCM,data:8zQ0/zcco2e4WC7HfgPb6fEUm4nKdq4BnlsGJBxj5CSK,iv:9XkMjPs1pmlkgsfcU6Bu0xg3vkAXFI0/ErqC5wnFmXY=,tag:MnyBtZYnAuguodcWXPZgHA==,type:str]
 sops:
     kms: []
@@ -22,8 +22,8 @@ sops:
             S015SVh1djlQcytVV3d4MUNadkF1SFEK1sx9j4D1CrXD68EgJ7ji/c1y+74Jc2JC
             nIN+wtITLElElC/hgQTSas8KGlbCaZCDmrq7pZXbnAj3UKUPqXjORA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-02-08T20:46:32Z"
-    mac: ENC[AES256_GCM,data:r9vb9xwNG3tpWOvgAA2CwwNi5iaH14cNfIlQiqCdugVHyi/oDH8mGDVPtyHfl17dLF6JBotNvZP/zH6seBh3GDKI1MCZVJBVtvQ3Cw7V7xSXMs00Hm2XY0asTPvxMcCUW0aCvQ7U8vaSQkFa1+SAbUKQZVe5Nzjnya53iVMMAAo=,iv:K9nr/wtG8K/6i+jM+HN1KeFIn9V2J+fCJGxikL1hZZw=,tag:6mSto57l6LU3hjhBBTK2tg==,type:str]
+    lastmodified: "2024-05-31T17:18:11Z"
+    mac: ENC[AES256_GCM,data:iKM3ntY04Mvu4NXd/tBN2CpunWAkFemvlUABBnjYIV45WAHziO0d8715ZKRPc8pYUVZz/U01V2dqYcWB9ePPOOJuPqExaiqWZXXn26ktIgqGWQDX4p/SXg0fdR3yQJnl58sUSn5MJSvsk4Zlw2fh8uTgBkGNLd0ZA8+sKgsrfwQ=,iv:0p21ToEcRfnE+PzexGAeYXD5wGRQHkmDX7EhTho7Pw8=,tag:sFgFynFWQ44+NjBUhoocPA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
