--- a/kubernetes/apps/storage/harbor/app/helmrelease.yaml
+++ b/kubernetes/apps/storage/harbor/app/helmrelease.yaml
@@ -114,7 +114,7 @@ spec:
       type: external
       external:
         sentinelMasterSet: ""
-        addr: "redis-headless.database.svc.cluster.local:6379"
+        addr: "redis-sentinel.database.svc.cluster.local:6379"
         coreDatabaseIndex: "69"
         jobserviceDatabaseIndex: "68"
         registryDatabaseIndex: "67"
