--- a/kubernetes/apps/storage/harbor/app/pvc/jobservice-scandata.yaml
+++ b/kubernetes/apps/storage/harbor/app/pvc/jobservice-scandata.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   storageClassName: longhorn-fast
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 10Gi
