--- a/kubernetes/apps/storage/harbor/app/pvc/jobservice.yaml
+++ b/kubernetes/apps/storage/harbor/app/pvc/jobservice.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   storageClassName: longhorn-fast
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: 10Gi
