--- a/kubernetes/apps/storage/harbor/app/helmrelease.yaml
+++ b/kubernetes/apps/storage/harbor/app/helmrelease.yaml
@@ -96,8 +96,7 @@ spec:
           multipartcopychunksize: "335544320"
           multipartcopymaxconcurrency: 32
           multipartcopythresholdsize: "1073741824"
-          accesskey: ${S3_ACCESS_KEY}
-          secretkey: ${S3_SECRET_KEY}
+          existingSecret: harbor-secret
 
     existingSecretAdminPassword: &secret "harbor-secret"
     existingSecretAdminPasswordKey: "HARBOR_ADMIN_PASSWORD"
