--- a/kubernetes/apps/storage/harbor/app/secret.sops.yaml
+++ b/kubernetes/apps/storage/harbor/app/secret.sops.yaml
@@ -8,8 +8,8 @@ stringData:
     password: ENC[AES256_GCM,data:J/KmMDPj9S50Z6KBn3l3UtCPUj6e,iv:zPJFlQ/yDuRjd4jPeaRDDjF47oSm52uB2Ah/TcHzobg=,tag:ftTgM4XFI1G7hei5+qX50Q==,type:str]
     REGISTRY_PASSWD: ENC[AES256_GCM,data:BDxgKG83vN7c8g==,iv:Qi6jEWvVWYkrbFlVOM/3gxm/NJDo2+aHNMzZh58z9H4=,tag:c6gx5TeiIMS8Okb8iyk8zw==,type:str]
     REGISTRY_HTPASSWD: ENC[AES256_GCM,data:7LV7A9ketl97fA==,iv:tSNir0fl+D0nkyGlQil1KIC8ZYLr5KYxwJowUpLZVSU=,tag:IBDUmPnQw/u9fUyDPRTcsg==,type:str]
-    S3_ACCESS_KEY: ENC[AES256_GCM,data:pSttZaB4cKHS,iv:ivXIuRuZCdG/QWwcUU6MPhwCJ1VOknr0EVpX+/DUBDw=,tag:EKlnfhe/RrbkjMxXp5gbyQ==,type:str]
-    S3_SECRET_KEY: ENC[AES256_GCM,data:HVvYpl0lRP0DUw==,iv:ITzSVUtKwyR5VPCtd8QE/60U53emxkbcxOsigJq1mKE=,tag:HwzyplNP2AljRZP0Gihfag==,type:str]
+    REGISTRY_STORAGE_S3_ACCESSKEY: ENC[AES256_GCM,data:hgVuQNJYrAXi,iv:gVNfG1a5Nl9UhMXjvph0MWZd4MMsT5DPpJ+ChkrbeVk=,tag:2vlT52QxjGiiYb/nOn2Uhw==,type:str]
+    REGISTRY_STORAGE_S3_SECRETKEY: ENC[AES256_GCM,data:HVsMtt4tJDK2ig==,iv:q7XgWTVYaK4fzFC80ppTh41jIw4hH+4UFmSUCjxQ9NQ=,tag:P1Rl5QqvRxdVkIt2KSbISw==,type:str]
     HARBOR_GH_TOKEN: ENC[AES256_GCM,data:yNZonByYvv5XO4nUdHJ5,iv:jV17f5d/ABhwkOhwzRChY5dB1Qv2nEjjSf3KCssYKeg=,tag:oRgCXgGC2KTm24xLVu89cA==,type:str]
 sops:
     kms: []
@@ -26,8 +26,8 @@ sops:
             YVlVL3Y0VnlWaG1takNtMVBzMXU0Q1UKT8qLuzSgM3Y99k7fb0Srr/Nbg0Z8ixWA
             yUEkQNUDDTxtjYI9WxqADBd20TvvzDY6P+DYNZ55e9kZdgkRWAGfvg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-06-02T16:28:21Z"
-    mac: ENC[AES256_GCM,data:1FzfZ0mD8O/8zK79dVIgf3fw5x45+OU1flEChnPCN2apSHg1xQrPDimA7fMT0y0xu4UWCQaVam7OXIguHDYgPTmMvfhrzF2P4At153cklYpxG3bDSem5UGhrd4ZJIo7bAsn5atm8KkM/n90oE5QpwsoXBmaMGgT3jlm34DGhrFM=,iv:L55fpQn9aVTaRWma5NK69wNFsZmz8WwQIMP27g9WFdI=,tag:ii/5ODlh6fLdb9SjtvsAbw==,type:str]
+    lastmodified: "2024-06-02T21:27:52Z"
+    mac: ENC[AES256_GCM,data:g5wvf+c9lbyL7cF9u85Z2GGlrtb6mkICXybEEJWNol0/3i/foD/GIBPHtZeQhD4H5GWtgvsxdHWUuz2ShGpSKgufpSkLotIOL+BHLjT/ydpQik/7cFx2pmujdRRSYerlYKE2skkDKdCH9c4nIs7aWuZVeSRXCMkKlyw6yxVM3DE=,iv:FSPHupwojoRaPSEuYn/mTAIUmQBeFtldbgRc5OXW394=,tag:WARaurkaiLzEJAYMxedUZA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
