--- a/kubernetes/apps/storage/harbor/webhook/helmrelease.yaml
+++ b/kubernetes/apps/storage/harbor/webhook/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: harbor-init-cronjob
+  name: harbor-webhook
 spec:
   interval: 30m
   chart:
