--- a/kubernetes/apps/storage/harbor/webhook/helmrelease.yaml
+++ b/kubernetes/apps/storage/harbor/webhook/helmrelease.yaml
@@ -8,7 +8,7 @@ spec:
   interval: 30m
   chart:
     spec:
-      chart: harbor-webhook
+      chart: harbor-container-webhook
       version: 0.7.0
       sourceRef:
         kind: HelmRepository
