--- a/kubernetes/apps/database/redis/app/helmrelease.yaml
+++ b/kubernetes/apps/database/redis/app/helmrelease.yaml
@@ -84,7 +84,7 @@ spec:
     networkPolicy:
       enabled: false
     metrics:
-      enabled: true
+      enabled: false
       image:
         repository: bitnami/redis-exporter
         tag: 1.55.0-debian-11-r0
