--- a/kubernetes/apps/kube-system/node-feature-discovery/rules/kustomization.yaml
+++ b/kubernetes/apps/kube-system/node-feature-discovery/rules/kustomization.yaml
@@ -3,6 +3,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./google-coral-device.yaml
-  - ./intel-gpu-device.yaml
-  - ./zigbee-sonoff-dongle.yaml
+  # - ./google-coral-device.yaml
+  # - ./intel-gpu-device.yaml
+  # - ./zigbee-sonoff-dongle.yaml
