--- a/kubernetes/apps/storage/harbor/app/helmrelease.yaml
+++ b/kubernetes/apps/storage/harbor/app/helmrelease.yaml
@@ -83,22 +83,22 @@ spec:
           existingClaim: "harbor-trivy"
       imageChartStorage:
         disableredirect: true
-        type: s3
-        # filesystem:
-        #   rootdirectory: /storage
-        s3:
-          region: us-east-1
-          chunksize: "33554432"
-          storageclass: STANDARD
-          v4auth: true
-          secure: false
-          encrypt: false
-          bucket: harbor
-          regionendpoint: http://minio.storage.svc
-          multipartcopychunksize: "335544320"
-          multipartcopymaxconcurrency: 32
-          multipartcopythresholdsize: "1073741824"
-          existingSecret: harbor-secret
+        type: filesystem
+        filesystem:
+          rootdirectory: /storage
+        # s3:
+        #   region: us-east-1
+        #   chunksize: "33554432"
+        #   storageclass: STANDARD
+        #   v4auth: true
+        #   secure: false
+        #   encrypt: false
+        #   bucket: harbor
+        #   regionendpoint: http://minio.storage.svc
+        #   multipartcopychunksize: "335544320"
+        #   multipartcopymaxconcurrency: 32
+        #   multipartcopythresholdsize: "1073741824"
+        #   existingSecret: harbor-secret
 
     existingSecretAdminPassword: &secret "harbor-secret"
     existingSecretAdminPasswordKey: "HARBOR_ADMIN_PASSWORD"
