--- a/kubernetes/apps/storage/longhorn/app/helmrelease.yaml
+++ b/kubernetes/apps/storage/longhorn/app/helmrelease.yaml
@@ -47,11 +47,7 @@ spec:
       defaultReplicaCount: 1
       backupTarget: s3://bkp-cluster@us-east-1/
       backupTargetCredentialSecret: s3-secret
-      taintToleration:
-        - key: "node-role.kubernetes.io/control-plane"
-          operator: "Equal"
-          value: ""
-          effect: "NoSchedule"
+      taintToleration: node-role.kubernetes.io/master=true:NoSchedule
     pspEnable: false
     longhornManager:
       tolerations:
