--- a/kubernetes/apps/ai/ollama/addons/secret.sops.yaml
+++ b/kubernetes/apps/ai/ollama/addons/secret.sops.yaml
@@ -4,7 +4,7 @@ metadata:
     name: ollama-telesecret
 stringData:
     TOKEN: ENC[AES256_GCM,data:c55IDqHV2VIlO+7/Ze166HAxiX42Vpntz2TOjodbpO4K4woQp3tO5B6OCVCH,iv:q2bHFvLqtVFQtuTgL+1UM/1Dlg50FlDiEt/7aAoGy2g=,tag:REOn7asgU/21URKmFO682Q==,type:str]
-    ADMIN_ID: ENC[AES256_GCM,data:ANYmFSHzTzDn,iv:b45UKGHKwoFlPD37TgRMou9I2c+ubRU1+Sk5ryc1e04=,tag:pFDiOqKFJZDdO/li3mQhbg==,type:int]
+    ADMIN_ID: ENC[AES256_GCM,data:RoDTgEZvPOg8,iv:MLK1iQIL1eQQygBlsU7DMQgoWO5NeFyHN8hiDO4Fc94=,tag:/uOk44+gsXBojaXLX75SHA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -20,8 +20,8 @@ sops:
             YjY2N0p3TnZURmRLNEEwNURsVnRKYVEKQknJjY0GRL+5QONT6yHFPpbSwD0B3ivx
             i2xaNPT2ik0T2FJ+/BfzyTtOHYV3aOeCwOymS1SzZn9A/SwKoa4JgA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-06-07T21:54:53Z"
-    mac: ENC[AES256_GCM,data:Bb/MepaugEezuFxEZJd8c99kqkvNN5zNSLXSDr/GAoOisRgiNdpJbbKSQKgL4ZzZIRB7AykfMw6OPGSf5xMmsQ9dVLOBTqRpAJXAZq2w2F8ZFmsA1oHfKssWYpRNQGXblNZAFAfh+8DvwRCAMd6Dshnv5HRoyYEiLy5hoDUhzJo=,iv:s2VplRtmkRKq/jSwh6/Y3bZclqB/M4r20FJY5zjemQg=,tag:/SozOsECEdAUOPSy2YuTww==,type:str]
+    lastmodified: "2024-06-07T21:56:23Z"
+    mac: ENC[AES256_GCM,data:cIRxEK/UClv5hCEM0B+b9ExXfHNjNf4wNXUr0MUAMsf6OaPjV69xs1N4MG58yfzxq09orI8BRsLlBneXHKhIB0OVACARqnhKZ6D9uuadoHkEnJYj6WR4C5xmmSLNiXq4JKpbMjiRsMP71LACQ886jAjk+ZZAhNcCcDjoWnvIoW4=,iv:LYK2l3Sr+lUsuWrjpELJ6XJpOrhtu7iTpUVyRipOHJM=,tag:PAwc3t5Zc5WHBPNezsZv2A==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
