--- a/kubernetes/apps/ai/ollama/addons/secret.sops.yaml
+++ b/kubernetes/apps/ai/ollama/addons/secret.sops.yaml
@@ -4,7 +4,8 @@ metadata:
     name: ollama-telesecret
 stringData:
     TOKEN: ENC[AES256_GCM,data:c55IDqHV2VIlO+7/Ze166HAxiX42Vpntz2TOjodbpO4K4woQp3tO5B6OCVCH,iv:q2bHFvLqtVFQtuTgL+1UM/1Dlg50FlDiEt/7aAoGy2g=,tag:REOn7asgU/21URKmFO682Q==,type:str]
-    ADMIN_ID: ENC[AES256_GCM,data:RoDTgEZvPOg8,iv:MLK1iQIL1eQQygBlsU7DMQgoWO5NeFyHN8hiDO4Fc94=,tag:/uOk44+gsXBojaXLX75SHA==,type:str]
+    ADMIN_ID: ENC[AES256_GCM,data:jzMnrLEwhuK7,iv:OooUsTgNuwWuQRxcxM6mnEoxWKpXdoz4BsD06c/Hlis=,tag:vL8u0c087T1Jdy8VryM34A==,type:str]
+    USER_IDS: ENC[AES256_GCM,data:dMDuQpWY+ixe,iv:BKIQaP+vls36tqPezrBZ8i+0V8XIMxtUMVXidz+oCsU=,tag:fpIg/rxp7B2naAtM98MlWg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -20,8 +21,8 @@ sops:
             YjY2N0p3TnZURmRLNEEwNURsVnRKYVEKQknJjY0GRL+5QONT6yHFPpbSwD0B3ivx
             i2xaNPT2ik0T2FJ+/BfzyTtOHYV3aOeCwOymS1SzZn9A/SwKoa4JgA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-06-07T21:56:23Z"
-    mac: ENC[AES256_GCM,data:cIRxEK/UClv5hCEM0B+b9ExXfHNjNf4wNXUr0MUAMsf6OaPjV69xs1N4MG58yfzxq09orI8BRsLlBneXHKhIB0OVACARqnhKZ6D9uuadoHkEnJYj6WR4C5xmmSLNiXq4JKpbMjiRsMP71LACQ886jAjk+ZZAhNcCcDjoWnvIoW4=,iv:LYK2l3Sr+lUsuWrjpELJ6XJpOrhtu7iTpUVyRipOHJM=,tag:PAwc3t5Zc5WHBPNezsZv2A==,type:str]
+    lastmodified: "2024-06-07T22:01:30Z"
+    mac: ENC[AES256_GCM,data:odspB9W4YK6rnV9Qtu0+VKUNIqhjY3+8IPXAL6fM9RBd7iSKBs3KIszw7z7oIiQ4ueH4DFr+ZvqQVG0hjVyi4bFvDvpzomiJJhBNGY95Xn4DkvO0Z2D541dJIxUkqt0P1azmn3Hp4WfhHKE2W6morjgz1NM+NpMg/7RpCvqGZv8=,iv:EsN+aU+mM/0Mi0oc+k41iUXglH3oAZWi+9VXdW4Jl/o=,tag:1iJt14oC3m+KgxMe8/DQOg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
