--- a/kubernetes/apps/ai/ollama/addons/secret.sops.yaml
+++ b/kubernetes/apps/ai/ollama/addons/secret.sops.yaml
@@ -2,10 +2,11 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: ollama-telesecret
-stringData:
-    TOKEN: ENC[AES256_GCM,data:c55IDqHV2VIlO+7/Ze166HAxiX42Vpntz2TOjodbpO4K4woQp3tO5B6OCVCH,iv:q2bHFvLqtVFQtuTgL+1UM/1Dlg50FlDiEt/7aAoGy2g=,tag:REOn7asgU/21URKmFO682Q==,type:str]
-    ADMIN_ID: ENC[AES256_GCM,data:jzMnrLEwhuK7,iv:OooUsTgNuwWuQRxcxM6mnEoxWKpXdoz4BsD06c/Hlis=,tag:vL8u0c087T1Jdy8VryM34A==,type:str]
-    USER_IDS: ENC[AES256_GCM,data:dMDuQpWY+ixe,iv:BKIQaP+vls36tqPezrBZ8i+0V8XIMxtUMVXidz+oCsU=,tag:fpIg/rxp7B2naAtM98MlWg==,type:str]
+    type: Opaque
+data:
+    TOKEN: ENC[AES256_GCM,data:SIDKdOYI3N9oTOtB6ay0Jz13YxPDyB3+Pa0IOgPv9O6bD+xXDCYPYxDOuFum,iv:ow4EoQfUm+8lR1raBu7ujGhu5wVYgbkv2DmP+n54Qxc=,tag:GqQlyKL47MhzSGM09C87GA==,type:str]
+    ADMIN_ID: ENC[AES256_GCM,data:aomNpkJfZ8hWB0L6,iv:rIrYdxAPRQmjmG16jBelxmE4YOiexymMtfHwdgB9+1A=,tag:2OXtVwh/ToLrR6iWkufZ/A==,type:str]
+    USER_IDS: ENC[AES256_GCM,data:y83RwzACPd4fWh0W,iv:L0oC2BwFPgvMFDAtn2Ts3PSZ+ydjhPkPPTZ3jDVKmsM=,tag:4xrgfK1JkLvB98q4bzJYgw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +22,8 @@ sops:
             YjY2N0p3TnZURmRLNEEwNURsVnRKYVEKQknJjY0GRL+5QONT6yHFPpbSwD0B3ivx
             i2xaNPT2ik0T2FJ+/BfzyTtOHYV3aOeCwOymS1SzZn9A/SwKoa4JgA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-06-07T22:01:30Z"
-    mac: ENC[AES256_GCM,data:odspB9W4YK6rnV9Qtu0+VKUNIqhjY3+8IPXAL6fM9RBd7iSKBs3KIszw7z7oIiQ4ueH4DFr+ZvqQVG0hjVyi4bFvDvpzomiJJhBNGY95Xn4DkvO0Z2D541dJIxUkqt0P1azmn3Hp4WfhHKE2W6morjgz1NM+NpMg/7RpCvqGZv8=,iv:EsN+aU+mM/0Mi0oc+k41iUXglH3oAZWi+9VXdW4Jl/o=,tag:1iJt14oC3m+KgxMe8/DQOg==,type:str]
+    lastmodified: "2024-06-07T22:08:31Z"
+    mac: ENC[AES256_GCM,data:dQ5vpzuXSTxl0Et068C+CmD5VlB5wi7ur+9m8Sp3gGynPAXbhSJv3JFXZB8E5Df51jXvt4CzJiRDijc3XU4eH8FpRPnHzEBKbFV0suG2ItExeQjlFO55l+vJo0C/S8mhQpZ5Zv798kDu8d+utVoCH/Wc+JWWS9HjS9PrYJBY1pU=,iv:dIvRrlhsBCpM2lit11Z9Q8YF/xY6K36hfGTV9ANYPn4=,tag:MM64a6DtfUdM0PcSWMlleg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
