--- a/kubernetes/apps/ai/ollama/addons/secret.sops.yaml
+++ b/kubernetes/apps/ai/ollama/addons/secret.sops.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: ollama-telesecret
-data:
-    TOKEN: ENC[AES256_GCM,data:SIDKdOYI3N9oTOtB6ay0Jz13YxPDyB3+Pa0IOgPv9O6bD+xXDCYPYxDOuFum,iv:ow4EoQfUm+8lR1raBu7ujGhu5wVYgbkv2DmP+n54Qxc=,tag:GqQlyKL47MhzSGM09C87GA==,type:str]
-    ADMIN_ID: ENC[AES256_GCM,data:aomNpkJfZ8hWB0L6,iv:rIrYdxAPRQmjmG16jBelxmE4YOiexymMtfHwdgB9+1A=,tag:2OXtVwh/ToLrR6iWkufZ/A==,type:str]
-    USER_IDS: ENC[AES256_GCM,data:y83RwzACPd4fWh0W,iv:L0oC2BwFPgvMFDAtn2Ts3PSZ+ydjhPkPPTZ3jDVKmsM=,tag:4xrgfK1JkLvB98q4bzJYgw==,type:str]
+stringData:
+    TOKEN: ENC[AES256_GCM,data:q5V3Pt6qV7ZCkhwjnwClxiqqJB8PikFxQ1CzIX5iA2E3AOwGl7e6/WJVZ5l/,iv:LC9HB5Ai+WTCEzM2C87QOFjAEuhoBXukL/lY1Tkye5c=,tag:xovvZhVveuXVKunr2yn9mg==,type:str]
+    ADMIN_ID: ENC[AES256_GCM,data:0a4Wj0xatY4Ll3D7,iv:qifxcoeTUU4gtEyvMqQ7ydvAz5QxFKfr+X1ktVC6Ttc=,tag:4Gh7dNJmEhgCFkkvjeoVvA==,type:str]
+    USER_IDS: ENC[AES256_GCM,data:fZmFjwWzEiWup3wn,iv:BPl+v4XUpaAMea/keWA0wqz3gwX8rmlR+wmAW4dVyck=,tag:/Fmvp5EBfyDSw/n67AC1sA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +21,8 @@ sops:
             YjY2N0p3TnZURmRLNEEwNURsVnRKYVEKQknJjY0GRL+5QONT6yHFPpbSwD0B3ivx
             i2xaNPT2ik0T2FJ+/BfzyTtOHYV3aOeCwOymS1SzZn9A/SwKoa4JgA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-06-07T22:09:29Z"
-    mac: ENC[AES256_GCM,data:Ux6FGy1ghSwAUyMBGyLHHYsswX/ILD57152Rf+zoKdslfJbh+er/PLriq3XWGulVQQ2TBctaKFw0Vn6KbhEeE99at0HSUULGFWPCxoKAkItY41Xhsf53gu38jBdsuWKO8r0vl7gmDlhJe6/2lv0vaO46NZPVrx7xpEOHc6UYTfw=,iv:G1oKrvv2gkWUhpAkeigHEpaETWE0O0AN/aVk0FoK+cw=,tag:iX+o+GjDTAyRMprbUVydGw==,type:str]
+    lastmodified: "2024-06-07T22:11:09Z"
+    mac: ENC[AES256_GCM,data:25jlwIQOQxhbQlEfob49GFAOgJ2dHEzyGFcIjVM3IN52BBblJvNQrc+RZUBs92QnyECMaxUNlheViD7rf7UROxZXhVVaehjKeM/FaIWZzOVcdgzwZzB1Y43oTtZTChu04RDCd8/L/CK0IhAtx9OB1m4j1GR9zH2omvry5hoiZJk=,iv:yQ1L0Q75oFZtfWETtiYkGPysIT2o7D6YNtNF9QPuXCY=,tag:x8aEyEkPyrrazpumDx1FBA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
