--- a/kubernetes/apps/ai/ollama/addons/secret.sops.yaml
+++ b/kubernetes/apps/ai/ollama/addons/secret.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: ollama-telesecret
 stringData:
     TOKEN: ENC[AES256_GCM,data:q5V3Pt6qV7ZCkhwjnwClxiqqJB8PikFxQ1CzIX5iA2E3AOwGl7e6/WJVZ5l/,iv:LC9HB5Ai+WTCEzM2C87QOFjAEuhoBXukL/lY1Tkye5c=,tag:xovvZhVveuXVKunr2yn9mg==,type:str]
-    ADMIN_ID: ENC[AES256_GCM,data:0a4Wj0xatY4Ll3D7,iv:qifxcoeTUU4gtEyvMqQ7ydvAz5QxFKfr+X1ktVC6Ttc=,tag:4Gh7dNJmEhgCFkkvjeoVvA==,type:str]
-    USER_IDS: ENC[AES256_GCM,data:fZmFjwWzEiWup3wn,iv:BPl+v4XUpaAMea/keWA0wqz3gwX8rmlR+wmAW4dVyck=,tag:/Fmvp5EBfyDSw/n67AC1sA==,type:str]
+    ADMIN_ID: ENC[AES256_GCM,data:vFJVt3jslfwH,iv:WDsyRd8pifC821/IR/eUnKj2qus8KE8mkHgp2RH5nc0=,tag:H5GMuoyGDOVIyk9y3JC1Aw==,type:str]
+    USER_IDS: ENC[AES256_GCM,data:/YBDs0PeKKqu,iv:8NnrVtmUwN8C3AXfxsPXjWVKMIIz7pQ+bXa8fv3fzQA=,tag:Afa42jlVS7KRxuxhO6CuOQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +21,8 @@ sops:
             YjY2N0p3TnZURmRLNEEwNURsVnRKYVEKQknJjY0GRL+5QONT6yHFPpbSwD0B3ivx
             i2xaNPT2ik0T2FJ+/BfzyTtOHYV3aOeCwOymS1SzZn9A/SwKoa4JgA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-06-07T22:11:09Z"
-    mac: ENC[AES256_GCM,data:25jlwIQOQxhbQlEfob49GFAOgJ2dHEzyGFcIjVM3IN52BBblJvNQrc+RZUBs92QnyECMaxUNlheViD7rf7UROxZXhVVaehjKeM/FaIWZzOVcdgzwZzB1Y43oTtZTChu04RDCd8/L/CK0IhAtx9OB1m4j1GR9zH2omvry5hoiZJk=,iv:yQ1L0Q75oFZtfWETtiYkGPysIT2o7D6YNtNF9QPuXCY=,tag:x8aEyEkPyrrazpumDx1FBA==,type:str]
+    lastmodified: "2024-06-07T22:22:34Z"
+    mac: ENC[AES256_GCM,data:MfV4KSrpTf6uC9s6AYtlJtbulaMcEWuqQvwS/2Qwjiyj4Rdx2ObdG5hDQg7TLhG23Itc2wM56OFRbCg9aWrfB2+R6/ej6beFu7mtJQyluOeSrNzmSQiUYUxvbklCNUdtt9C910YoB36B7UqgxicRmF0WW/CUfEX60Ix/yBCAKxo=,iv:pHAXNtHGAtKODDbjGsu4M5w6NHfQk0wUTQ0hNC2D8ZA=,tag:hYIP6W85TEK6sdrVkPuheg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
